// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow output filters edges with custom function 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"no\\"?>
<!DOCTYPE svg PUBLIC \\"-//W3C//DTD SVG 1.1//EN\\"
 \\"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\\">
<!-- Generated by graphviz version 2.40.1 (20161225.0304)
 -->
<!-- Pages: 1 -->
<svg width=\\"819pt\\" height=\\"365pt\\"
 viewBox=\\"0.00 0.00 818.93 365.40\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\">
<g id=\\"graph0\\" class=\\"graph\\" transform=\\"scale(1 1) rotate(0) translate(4 361.4)\\">
<polygon fill=\\"#ffffff\\" stroke=\\"transparent\\" points=\\"-4,4 -4,-361.4 814.9341,-361.4 814.9341,4 -4,4\\"/>
<!-- appConfig -->
<g id=\\"node1\\" class=\\"node\\">
<title>appConfig</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"446.6025,-274.6 371.3975,-274.6 371.3975,-238.6 446.6025,-238.6 446.6025,-274.6\\"/>
<text text-anchor=\\"middle\\" x=\\"409\\" y=\\"-252.4\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">appConfig</text>
</g>
<!-- project -->
<g id=\\"node6\\" class=\\"node\\">
<title>project</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"358.3712,-191.8 303.6288,-191.8 303.6288,-155.8 358.3712,-155.8 358.3712,-191.8\\"/>
<text text-anchor=\\"middle\\" x=\\"331\\" y=\\"-169.6\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">project</text>
</g>
<!-- appConfig&#45;&gt;project -->
<g id=\\"edge1\\" class=\\"edge\\">
<title>appConfig&#45;&gt;project</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M384.6076,-230.7066C375.1322,-220.648 364.3119,-209.1619 354.8854,-199.1553\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"382.2847,-233.345 391.6893,-238.224 387.3799,-228.5451 382.2847,-233.345\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"357.3986,-196.7187 347.994,-191.8398 352.3033,-201.5186 357.3986,-196.7187\\"/>
</g>
<!-- coreLogEntry -->
<g id=\\"node2\\" class=\\"node\\">
<title>coreLogEntry</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"716.7465,-357.4 623.2535,-357.4 623.2535,-321.4 716.7465,-321.4 716.7465,-357.4\\"/>
<text text-anchor=\\"middle\\" x=\\"670\\" y=\\"-335.2\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">coreLogEntry</text>
</g>
<!-- user -->
<!-- A user of the application -->
<g id=\\"node3\\" class=\\"node\\">
<title>user</title>
<g id=\\"a_node3\\"><a xlink:title=\\"A user of the application\\">
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"723,-274.6 669,-274.6 669,-238.6 723,-238.6 723,-274.6\\"/>
<text text-anchor=\\"middle\\" x=\\"696\\" y=\\"-252.4\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">user</text>
</a>
</g>
</g>
<!-- coreLogEntry&#45;&gt;user -->
<g id=\\"edge2\\" class=\\"edge\\">
<title>coreLogEntry&#45;&gt;user</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M678.8103,-311.3425C681.5482,-302.6236 684.5636,-293.0205 687.2943,-284.3244\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"675.4269,-310.4347 675.7702,-321.024 682.1054,-312.5319 675.4269,-310.4347\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"690.6786,-285.229 690.3353,-274.6398 684.0002,-283.1319 690.6786,-285.229\\"/>
</g>
<!-- xUserRole -->
<g id=\\"node4\\" class=\\"node\\">
<title>xUserRole</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"810.8683,-357.4 735.1317,-357.4 735.1317,-321.4 810.8683,-321.4 810.8683,-357.4\\"/>
<text text-anchor=\\"middle\\" x=\\"773\\" y=\\"-335.2\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">xUserRole</text>
</g>
<!-- xUserRole&#45;&gt;user -->
<g id=\\"edge3\\" class=\\"edge\\">
<title>xUserRole&#45;&gt;user</title>
<path fill=\\"none\\" stroke=\\"#000000\\" d=\\"M748.9203,-313.5066C739.6581,-303.5466 729.0942,-292.187 719.8533,-282.2501\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"746.5382,-316.0846 755.9112,-321.024 751.6643,-311.3176 746.5382,-316.0846\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"722.1491,-279.5792 712.7761,-274.6398 717.023,-284.3462 722.1491,-279.5792\\"/>
</g>
<!-- role -->
<g id=\\"node5\\" class=\\"node\\">
<title>role</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"800,-274.6 746,-274.6 746,-238.6 800,-238.6 800,-274.6\\"/>
<text text-anchor=\\"middle\\" x=\\"773\\" y=\\"-252.4\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">role</text>
</g>
<!-- xUserRole&#45;&gt;role -->
<g id=\\"edge4\\" class=\\"edge\\">
<title>xUserRole&#45;&gt;role</title>
<path fill=\\"none\\" stroke=\\"#000000\\" d=\\"M773,-310.9781C773,-302.5105 773,-293.237 773,-284.7846\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"769.5001,-311.024 773,-321.024 776.5001,-311.024 769.5001,-311.024\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"776.5001,-284.6397 773,-274.6398 769.5001,-284.6398 776.5001,-284.6397\\"/>
</g>
<!-- person -->
<g id=\\"node8\\" class=\\"node\\">
<title>person</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"321,-109 267,-109 267,-73 321,-73 321,-109\\"/>
<text text-anchor=\\"middle\\" x=\\"294\\" y=\\"-86.8\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">person</text>
</g>
<!-- project&#45;&gt;person -->
<!-- Person managing the project, DA BOSS -->
<g id=\\"edge5\\" class=\\"edge\\">
<title>project&#45;&gt;person</title>
<g id=\\"a_edge5\\"><a xlink:title=\\"Person managing the project, DA BOSS\\">
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M303.4575,-167.0414C278.4085,-160.2714 244.1814,-149.2394 236.2917,-137.8 227.0227,-124.3607 241.0235,-112.7711 257.5511,-104.4871\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"259.2196,-107.5728 266.8613,-100.2341 256.3111,-101.2056 259.2196,-107.5728\\"/>
</a>
</g>
<g id=\\"a_edge5&#45;label\\"><a xlink:title=\\"Person managing the project, DA BOSS\\">
<text text-anchor=\\"middle\\" x=\\"273.3542\\" y=\\"-129.7\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> projectManager  </text>
</a>
</g>
</g>
<!-- project&#45;&gt;person -->
<!-- Person coordinating all technical matters of the project -->
<g id=\\"edge6\\" class=\\"edge\\">
<title>project&#45;&gt;person</title>
<g id=\\"a_edge6\\"><a xlink:title=\\"Person coordinating all technical matters of the project\\">
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M322.7885,-155.424C317.9167,-144.5218 311.6493,-130.4962 306.2067,-118.3167\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"309.3366,-116.7417 302.0612,-109.0398 302.9456,-119.5976 309.3366,-116.7417\\"/>
</a>
</g>
<g id=\\"a_edge6&#45;label\\"><a xlink:title=\\"Person coordinating all technical matters of the project\\">
<text text-anchor=\\"middle\\" x=\\"355.1018\\" y=\\"-129.7\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> technicalManager  </text>
</a>
</g>
</g>
<!-- company -->
<g id=\\"node7\\" class=\\"node\\">
<title>company</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"235.8206,-36 168.1794,-36 168.1794,0 235.8206,0 235.8206,-36\\"/>
<text text-anchor=\\"middle\\" x=\\"202\\" y=\\"-13.8\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">company</text>
</g>
<!-- company&#45;&gt;project -->
<g id=\\"edge7\\" class=\\"edge\\">
<title>company&#45;&gt;project</title>
<path fill=\\"none\\" stroke=\\"#000000\\" d=\\"M201.2962,-46.505C202.1695,-73.2344 207.6162,-112.7375 230,-137.8 246.1642,-155.8986 272.0546,-164.8998 293.5749,-169.3758\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"204.7928,-46.2092 201.1634,-36.2554 197.7934,-46.3 204.7928,-46.2092\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"292.9473,-172.819 303.4146,-171.18 294.2099,-165.9338 292.9473,-172.819\\"/>
</g>
<!-- person&#45;&gt;project -->
<g id=\\"edge8\\" class=\\"edge\\">
<title>person&#45;&gt;project</title>
<path fill=\\"none\\" stroke=\\"#000000\\" d=\\"M331.0441,-98.9057C357.8821,-105.4718 390.8309,-115.5632 399,-127 410.5373,-143.1522 389.6859,-155.5257 368.1153,-163.4814\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"331.6581,-95.4546 321.1218,-96.5663 330.0517,-102.2678 331.6581,-95.4546\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"366.934,-160.1862 358.5945,-166.721 369.1889,-166.8131 366.934,-160.1862\\"/>
</g>
<!-- person&#45;&gt;company -->
<!-- Company the person beisLongso -->
<g id=\\"edge9\\" class=\\"edge\\">
<title>person&#45;&gt;company</title>
<g id=\\"a_edge9\\"><a xlink:title=\\"Company the person beisLongso\\">
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M263.2885,-66.6311C253.4642,-58.8357 242.5901,-50.2074 232.7622,-42.4091\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"261.2493,-69.481 271.2584,-72.9551 265.6004,-63.9975 261.2493,-69.481\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"234.8079,-39.5644 224.7988,-36.0904 230.4569,-45.0479 234.8079,-39.5644\\"/>
</a>
</g>
</g>
<!-- membership -->
<g id=\\"node9\\" class=\\"node\\">
<title>membership</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"605.7065,-357.4 520.2935,-357.4 520.2935,-321.4 605.7065,-321.4 605.7065,-357.4\\"/>
<text text-anchor=\\"middle\\" x=\\"563\\" y=\\"-335.2\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">membership</text>
</g>
<!-- membership&#45;&gt;person -->
<g id=\\"edge10\\" class=\\"edge\\">
<title>membership&#45;&gt;person</title>
<path fill=\\"none\\" stroke=\\"#000000\\" d=\\"M569.4743,-311.2279C572.841,-290.1151 574.2186,-261.1101 563,-238.6 518.2087,-148.7267 393.5264,-111.1794 330.8951,-97.6279\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"566.0098,-310.7165 567.6488,-321.1838 572.8951,-311.979 566.0098,-310.7165\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"331.539,-94.187 321.0365,-95.5829 330.1171,-101.0411 331.539,-94.187\\"/>
</g>
<!-- peopleGroup -->
<g id=\\"node10\\" class=\\"node\\">
<title>peopleGroup</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"553.587,-274.6 464.413,-274.6 464.413,-238.6 553.587,-238.6 553.587,-274.6\\"/>
<text text-anchor=\\"middle\\" x=\\"509\\" y=\\"-252.4\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">peopleGroup</text>
</g>
<!-- membership&#45;&gt;peopleGroup -->
<g id=\\"edge11\\" class=\\"edge\\">
<title>membership&#45;&gt;peopleGroup</title>
<path fill=\\"none\\" stroke=\\"#000000\\" d=\\"M545.4106,-312.4296C539.2899,-303.0445 532.4317,-292.5286 526.332,-283.1757\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"542.6213,-314.5598 551.0156,-321.024 548.4846,-310.7359 542.6213,-314.5598\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"529.1594,-281.1039 520.7651,-274.6398 523.2961,-284.9278 529.1594,-281.1039\\"/>
</g>
<!-- peopleGroup&#45;&gt;project -->
<g id=\\"edge12\\" class=\\"edge\\">
<title>peopleGroup&#45;&gt;project</title>
<path fill=\\"none\\" stroke=\\"#000000\\" d=\\"M460.5146,-234.0461C431.2845,-220.4492 394.6423,-203.4044 367.7989,-190.9177\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"459.3939,-237.3849 469.9371,-238.4292 462.3463,-231.038 459.3939,-237.3849\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"368.9277,-187.5827 358.3844,-186.5384 365.9752,-193.9296 368.9277,-187.5827\\"/>
</g>
<!-- workPackage -->
<g id=\\"node11\\" class=\\"node\\">
<title>workPackage</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"171.9091,-357.4 80.0909,-357.4 80.0909,-321.4 171.9091,-321.4 171.9091,-357.4\\"/>
<text text-anchor=\\"middle\\" x=\\"126\\" y=\\"-335.2\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">workPackage</text>
</g>
<!-- workPackage&#45;&gt;project -->
<g id=\\"edge13\\" class=\\"edge\\">
<title>workPackage&#45;&gt;project</title>
<path fill=\\"none\\" stroke=\\"#000000\\" d=\\"M135.0425,-311.8829C137.9487,-305.2055 141.5863,-298.3424 146,-292.6 185.0597,-241.7813 252.4749,-206.5162 294.2412,-188.2653\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"131.7098,-310.794 131.303,-321.381 138.2232,-313.3585 131.7098,-310.794\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"295.6849,-191.4546 303.5089,-184.3107 292.9376,-185.0163 295.6849,-191.4546\\"/>
</g>
<!-- workPackage&#45;&gt;company -->
<g id=\\"edge15\\" class=\\"edge\\">
<title>workPackage&#45;&gt;company</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M80.1547,-329.0966C44.1282,-317.9738 0,-296.2559 0,-256.6 0,-256.6 0,-256.6 0,-91 0,-57.6007 98.9101,-35.1991 158.3051,-24.7581\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"158.9236,-28.2032 168.1897,-23.0662 157.7426,-21.3035 158.9236,-28.2032\\"/>
<text text-anchor=\\"middle\\" x=\\"36.3596\\" y=\\"-171.1\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> leaderCompany  </text>
</g>
<!-- workPackage&#45;&gt;person -->
<g id=\\"edge16\\" class=\\"edge\\">
<title>workPackage&#45;&gt;person</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M129.1259,-321.2998C134.1282,-295.3734 145.495,-246.7224 165.7848,-209.8 188.213,-168.9863 194.7367,-157.4184 230,-127 238.3394,-119.8064 248.3387,-113.3682 257.928,-107.9948\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"259.7623,-110.9829 266.9285,-103.1793 256.46,-104.8107 259.7623,-110.9829\\"/>
<text text-anchor=\\"middle\\" x=\\"197.1076\\" y=\\"-212.5\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> leaderPerson  </text>
</g>
<!-- workPackage&#45;&gt;workPackage -->
<g id=\\"edge14\\" class=\\"edge\\">
<title>workPackage&#45;&gt;workPackage</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M182.0141,-345.2245C186.7515,-343.9782 189.7041,-342.0367 189.7041,-339.4 189.7041,-336.7633 186.7515,-334.8218 182.0141,-333.5755\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"181.1995,-341.8063 171.8114,-346.7169 182.2127,-348.7326 181.1995,-341.8063\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"182.2127,-330.0674 171.8114,-332.0831 181.1995,-336.9937 182.2127,-330.0674\\"/>
<text text-anchor=\\"middle\\" x=\\"208.817\\" y=\\"-336.7\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> parent  </text>
</g>
<!-- milestone -->
<g id=\\"node12\\" class=\\"node\\">
<title>milestone</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"294.4376,-274.6 223.5624,-274.6 223.5624,-238.6 294.4376,-238.6 294.4376,-274.6\\"/>
<text text-anchor=\\"middle\\" x=\\"259\\" y=\\"-252.4\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">milestone</text>
</g>
<!-- workPackage&#45;&gt;milestone -->
<g id=\\"edge17\\" class=\\"edge\\">
<title>workPackage&#45;&gt;milestone</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M135.4891,-321.338C141.3607,-311.665 149.6999,-300.2089 159.7745,-292.6 175.5677,-280.6721 195.6954,-272.4011 213.6895,-266.8245\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"214.7983,-270.1472 223.4257,-263.9974 212.8463,-263.4248 214.7983,-270.1472\\"/>
<text text-anchor=\\"middle\\" x=\\"193.6128\\" y=\\"-295.3\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> startMilestone  </text>
</g>
<!-- workPackage&#45;&gt;milestone -->
<g id=\\"edge18\\" class=\\"edge\\">
<title>workPackage&#45;&gt;milestone</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M171.7653,-329.6756C190.2342,-324.1532 210.9299,-315.788 227,-303.4 233.9063,-298.0762 239.8649,-290.8322 244.7046,-283.6347\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"247.9508,-285.039 250.2237,-274.6908 241.9937,-281.363 247.9508,-285.039\\"/>
<text text-anchor=\\"middle\\" x=\\"270.3636\\" y=\\"-295.3\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> endMilestone  </text>
</g>
<!-- milestone&#45;&gt;project -->
<g id=\\"edge19\\" class=\\"edge\\">
<title>milestone&#45;&gt;project</title>
<path fill=\\"none\\" stroke=\\"#000000\\" d=\\"M281.8272,-230.3487C290.3496,-220.548 300.0144,-209.4334 308.5065,-199.6675\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"278.8998,-228.3813 274.9791,-238.224 284.1821,-232.9746 278.8998,-228.3813\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"311.3926,-201.6825 315.3133,-191.8398 306.1103,-197.0892 311.3926,-201.6825\\"/>
</g>
<!-- annex -->
<g id=\\"node13\\" class=\\"node\\">
<title>annex</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"368,-357.4 314,-357.4 314,-321.4 368,-321.4 368,-357.4\\"/>
<text text-anchor=\\"middle\\" x=\\"341\\" y=\\"-335.2\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">annex</text>
</g>
<!-- annex&#45;&gt;project -->
<g id=\\"edge20\\" class=\\"edge\\">
<title>annex&#45;&gt;project</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M339.2923,-311.1209C337.4556,-280.7055 334.552,-232.6213 332.7132,-202.1706\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"335.8143,-311.5918 339.9108,-321.3627 342.8016,-311.1698 335.8143,-311.5918\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"336.1844,-201.5859 332.0879,-191.8151 329.1971,-202.0079 336.1844,-201.5859\\"/>
</g>
<!-- annex&#45;&gt;milestone -->
<g id=\\"edge21\\" class=\\"edge\\">
<title>annex&#45;&gt;milestone</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M328.7764,-312.0918C324.962,-305.2709 320.3327,-298.2867 315,-292.6 310.9482,-288.2792 306.2743,-284.2456 301.3898,-280.5573\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"325.7604,-313.8794 333.4622,-321.1548 331.9784,-310.6644 325.7604,-313.8794\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"303.2363,-277.577 293.0434,-274.6866 299.2091,-283.3026 303.2363,-277.577\\"/>
</g>
</g>
</svg>
"
`;

exports[`Flow output schema1.yaml + schema2.yaml -> diagram 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"no\\"?>
<!DOCTYPE svg PUBLIC \\"-//W3C//DTD SVG 1.1//EN\\"
 \\"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\\">
<!-- Generated by graphviz version 2.40.1 (20161225.0304)
 -->
<!-- Pages: 1 -->
<svg width=\\"231pt\\" height=\\"127pt\\"
 viewBox=\\"0.00 0.00 231.50 126.80\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\">
<g id=\\"graph0\\" class=\\"graph\\" transform=\\"scale(1 1) rotate(0) translate(4 122.8)\\">
<polygon fill=\\"#ffffff\\" stroke=\\"transparent\\" points=\\"-4,4 -4,-122.8 227.4951,-122.8 227.4951,4 -4,4\\"/>
<!-- user -->
<!-- A user of the platform -->
<g id=\\"node1\\" class=\\"node\\">
<title>user</title>
<g id=\\"a_node1\\"><a xlink:title=\\"A user of the platform\\">
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"125.7782,-36 71.7782,-36 71.7782,0 125.7782,0 125.7782,-36\\"/>
<text text-anchor=\\"middle\\" x=\\"98.7782\\" y=\\"-13.8\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">user</text>
</a>
</g>
</g>
<!-- project -->
<g id=\\"node2\\" class=\\"node\\">
<title>project</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"126.1493,-118.8 71.407,-118.8 71.407,-82.8 126.1493,-82.8 126.1493,-118.8\\"/>
<text text-anchor=\\"middle\\" x=\\"98.7782\\" y=\\"-96.6\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">project</text>
</g>
<!-- project&#45;&gt;user -->
<g id=\\"edge1\\" class=\\"edge\\">
<title>project&#45;&gt;user</title>
<path fill=\\"none\\" stroke=\\"#000000\\" d=\\"M61.4815,-91.3104C38.0414,-84.507 10.9733,-74.8095 4.0699,-64.8 -12.5857,-40.6507 28.5458,-28.4086 61.754,-22.6219\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"60.6623,-94.7156 71.2357,-94.0414 62.5497,-87.9748 60.6623,-94.7156\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"62.4105,-26.0615 71.7329,-21.0273 61.3059,-19.1492 62.4105,-26.0615\\"/>
<text text-anchor=\\"middle\\" x=\\"41.1323\\" y=\\"-56.7\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> projectManager  </text>
</g>
<!-- project&#45;&gt;user -->
<g id=\\"edge2\\" class=\\"edge\\">
<title>project&#45;&gt;user</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M98.7782,-82.424C98.7782,-71.7377 98.7782,-58.0504 98.7782,-46.0424\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"102.2783,-46.0397 98.7782,-36.0398 95.2783,-46.0398 102.2783,-46.0397\\"/>
<text text-anchor=\\"middle\\" x=\\"138.8799\\" y=\\"-56.7\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> technicalManager  </text>
</g>
<!-- project&#45;&gt;user -->
<g id=\\"edge3\\" class=\\"edge\\">
<title>project&#45;&gt;user</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M136.2556,-93.6974C152.5267,-88.5533 170.0561,-79.7599 179.7782,-64.8 193.0593,-44.3635 162.9341,-31.8047 135.7292,-24.9105\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"135.0625,-90.3964 126.3682,-96.4511 136.9406,-97.1397 135.0625,-90.3964\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"136.458,-21.4866 125.9243,-22.6227 134.8674,-28.3035 136.458,-21.4866\\"/>
<text text-anchor=\\"middle\\" x=\\"203.1366\\" y=\\"-56.7\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> creator  </text>
</g>
</g>
</svg>
"
`;

exports[`Flow output schema1.yaml -> diagram 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"no\\"?>
<!DOCTYPE svg PUBLIC \\"-//W3C//DTD SVG 1.1//EN\\"
 \\"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\\">
<!-- Generated by graphviz version 2.40.1 (20161225.0304)
 -->
<!-- Pages: 1 -->
<svg width=\\"164pt\\" height=\\"127pt\\"
 viewBox=\\"0.00 0.00 163.79 126.80\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\">
<g id=\\"graph0\\" class=\\"graph\\" transform=\\"scale(1 1) rotate(0) translate(4 122.8)\\">
<polygon fill=\\"#ffffff\\" stroke=\\"transparent\\" points=\\"-4,4 -4,-122.8 159.7899,-122.8 159.7899,4 -4,4\\"/>
<!-- user -->
<!-- A user of the platform -->
<g id=\\"node1\\" class=\\"node\\">
<title>user</title>
<g id=\\"a_node1\\"><a xlink:title=\\"A user of the platform\\">
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"75.5864,-36 21.5864,-36 21.5864,0 75.5864,0 75.5864,-36\\"/>
<text text-anchor=\\"middle\\" x=\\"48.5864\\" y=\\"-13.8\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">user</text>
</a>
</g>
</g>
<!-- project -->
<g id=\\"node2\\" class=\\"node\\">
<title>project</title>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"75.9575,-118.8 21.2152,-118.8 21.2152,-82.8 75.9575,-82.8 75.9575,-118.8\\"/>
<text text-anchor=\\"middle\\" x=\\"48.5864\\" y=\\"-96.6\\" font-family=\\"sans-serif\\" font-size=\\"14.00\\" fill=\\"#000000\\">project</text>
</g>
<!-- project&#45;&gt;user -->
<g id=\\"edge1\\" class=\\"edge\\">
<title>project&#45;&gt;user</title>
<path fill=\\"none\\" stroke=\\"#000000\\" d=\\"M12.8992,-79.2713C8.4536,-75.0443 4.5411,-70.2147 1.8781,-64.8 -3.3586,-54.1523 3.2488,-44.4731 12.9893,-36.7162\\"/>
<polygon fill=\\"none\\" stroke=\\"#000000\\" points=\\"10.8326,-82.1049 20.7575,-85.8128 15.3111,-76.725 10.8326,-82.1049\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"15.0993,-39.512 21.3063,-30.9258 11.0996,-33.7672 15.0993,-39.512\\"/>
<text text-anchor=\\"middle\\" x=\\"38.9405\\" y=\\"-56.7\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> projectManager  </text>
</g>
<!-- project&#45;&gt;user -->
<g id=\\"edge2\\" class=\\"edge\\">
<title>project&#45;&gt;user</title>
<path fill=\\"none\\" stroke=\\"#000000\\" stroke-dasharray=\\"1,5\\" d=\\"M67.0514,-82.4374C73.213,-74.101 77.7892,-63.9051 74.5864,-54 73.5664,-50.8457 72.1556,-47.7353 70.5139,-44.7432\\"/>
<polygon fill=\\"#000000\\" stroke=\\"#000000\\" points=\\"73.3879,-42.7406 65.0565,-36.1955 67.4879,-46.5076 73.3879,-42.7406\\"/>
<text text-anchor=\\"middle\\" x=\\"115.6881\\" y=\\"-56.7\\" font-family=\\"sans-serif\\" font-size=\\"9.00\\" fill=\\"#000000\\"> technicalManager  </text>
</g>
</g>
</svg>
"
`;
